[gd_scene load_steps=23 format=3 uid="uid://c3uhndimrdqxs"]

[ext_resource type="Script" uid="uid://c5dtw84yiogrv" path="res://scenes/fight_scene/BOSS_Figth/BOSS_Scene_UI/boss_ui.gd" id="1_fgs02"]
[ext_resource type="Texture2D" uid="uid://bhjkwkrswdmkj" path="res://assets/UI/fight_UI/ninepatch_default_blackt.png" id="1_ocmy0"]
[ext_resource type="FontFile" uid="uid://tybb5lh7kdw5" path="res://assets/Fonts/dragon-warrior-iv.ttf" id="2_fgs02"]
[ext_resource type="Resource" uid="uid://c06dn6ulc3rwp" path="res://scenes/fight_scene/BOSS_Figth/BOSS/Pelusin.tres" id="2_uos0l"]
[ext_resource type="Resource" uid="uid://cbjnuess7p7pk" path="res://scenes/fight_scene/Players/DATA_Player/Recursos/Espada.tres" id="3_r4qgo"]
[ext_resource type="PackedScene" uid="uid://df0w3twroh4ic" path="res://scenes/fight_scene/fight_sceneUI/Taco.tscn" id="4_ewiiu"]
[ext_resource type="Script" uid="uid://djssa2ys1lvxo" path="res://scenes/fight_scene/BOSS_Figth/BOSS_Scene_UI/Bossv_box_container.gd" id="4_fgs02"]
[ext_resource type="Resource" uid="uid://cj5kwmpha2k45" path="res://scenes/fight_scene/Players/DATA_Player/Recursos/Bruja.tres" id="4_jvxn7"]
[ext_resource type="Resource" uid="uid://b281a1las06jc" path="res://scenes/fight_scene/Players/DATA_Player/Recursos/Cazadora.tres" id="5_b5qpp"]
[ext_resource type="Resource" uid="uid://cnv7rhetrddxm" path="res://scenes/fight_scene/Players/DATA_Player/Recursos/Bardo.tres" id="6_p5gch"]
[ext_resource type="Texture2D" uid="uid://dnnp13hcs1cob" path="res://assets/UI/icons/bottles/Icon1.png" id="10_digen"]
[ext_resource type="Texture2D" uid="uid://cu4323jgibu8c" path="res://assets/UI/icons/bottles/Icon2.png" id="11_1mxdb"]
[ext_resource type="Texture2D" uid="uid://b7jwjtl4b7dxw" path="res://assets/UI/icons/bottles/Icon11.png" id="12_kfb72"]
[ext_resource type="Texture2D" uid="uid://dvyssqy10pgoj" path="res://assets/characters/EspadaP.png" id="14_risgj"]
[ext_resource type="Texture2D" uid="uid://crvl7dc5vlxdv" path="res://assets/characters/BrujaL.png" id="15_h5yyt"]
[ext_resource type="Texture2D" uid="uid://tyly7ufqmfdh" path="res://assets/characters/CazadoraM.png" id="16_g5t0y"]
[ext_resource type="Texture2D" uid="uid://d2ma55rmt7fb4" path="res://assets/characters/GuitarraL.png" id="17_4sqxb"]

[sub_resource type="Theme" id="Theme_a0k45"]

[sub_resource type="Theme" id="Theme_2u526"]
default_font = ExtResource("2_fgs02")

[sub_resource type="LabelSettings" id="LabelSettings_fi4vd"]
font = ExtResource("2_fgs02")
font_size = 25

[sub_resource type="Theme" id="Theme_5kxlg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uos0l"]
bg_color = Color(0.03839716, 0.038397174, 0.038397126, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.9999998, 0.89602464, 0.8219683, 1)
border_blend = true

[node name="BossUi" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fgs02")
Bos = ExtResource("2_uos0l")
Espada = ExtResource("3_r4qgo")
Bruja = ExtResource("4_jvxn7")
Cazadora = ExtResource("5_b5qpp")
Bardo = ExtResource("6_p5gch")

[node name="BossContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 122.0
offset_top = 518.0
offset_right = 1160.0
offset_bottom = 720.0
theme = SubResource("Theme_a0k45")
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="BossContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
texture = ExtResource("1_ocmy0")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="BossContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08800001
anchor_top = 0.08400001
anchor_right = 0.90300006
anchor_bottom = 0.896
offset_left = 0.05599785
offset_top = 0.031999588
offset_right = 0.08598328
offset_bottom = 0.0079956055
theme = SubResource("Theme_2u526")
theme_override_constants/separation = 22
alignment = 1
script = ExtResource("4_fgs02")

[node name="Attack" type="Button" parent="BossContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Attack"

[node name="Items" type="Button" parent="BossContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Items"

[node name="Run" type="Button" parent="BossContainer/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Run"

[node name="NinePatchRect2" type="NinePatchRect" parent="BossContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_ocmy0")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="BossContainer/NinePatchRect2"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 801.0
offset_bottom = 188.0
theme_override_constants/separation = 26

[node name="jugador1Label" type="Label" parent="BossContainer/NinePatchRect2/VBoxContainer"]
layout_mode = 2
text = "Espada HP: 100 "
label_settings = SubResource("LabelSettings_fi4vd")

[node name="jugador2Label" type="Label" parent="BossContainer/NinePatchRect2/VBoxContainer"]
layout_mode = 2
text = "Bruja 			   HP: 100 "
label_settings = SubResource("LabelSettings_fi4vd")

[node name="jugador3Label" type="Label" parent="BossContainer/NinePatchRect2/VBoxContainer"]
layout_mode = 2
text = "Cazadora HP: 100 "
label_settings = SubResource("LabelSettings_fi4vd")

[node name="jugador4Label" type="Label" parent="BossContainer/NinePatchRect2/VBoxContainer"]
layout_mode = 2
text = "Bardo    HP: 100 "
label_settings = SubResource("LabelSettings_fi4vd")

[node name="HBoxContainer" type="BoxContainer" parent="BossContainer/NinePatchRect2"]
visible = false
layout_mode = 0
offset_left = 5.0
offset_top = 6.0
offset_right = 390.0
offset_bottom = 145.0
theme = SubResource("Theme_5kxlg")
theme_override_constants/separation = 20

[node name="potion_red" type="Button" parent="BossContainer/NinePatchRect2/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = " Potion Red "
icon = ExtResource("10_digen")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Label" type="Label" parent="BossContainer/NinePatchRect2/HBoxContainer/potion_red"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.257
anchor_top = 0.72400004
anchor_right = 0.71300006
anchor_bottom = 0.9760001
offset_left = 0.042999268
offset_top = 0.051994324
offset_right = -0.013008118
offset_bottom = 0.04798889
text = "x 0"
horizontal_alignment = 1

[node name="potion_yellow" type="Button" parent="BossContainer/NinePatchRect2/HBoxContainer"]
layout_mode = 2
text = " Potion Yellow "
icon = ExtResource("11_1mxdb")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Label" type="Label" parent="BossContainer/NinePatchRect2/HBoxContainer/potion_yellow"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.344
anchor_top = 0.75600004
anchor_right = 0.66400003
anchor_bottom = 0.93700004
offset_left = 0.03199768
offset_top = -1.0120087
offset_right = -0.008003235
offset_bottom = 0.0009918213
text = "x 0"
horizontal_alignment = 1

[node name="potion_purple" type="Button" parent="BossContainer/NinePatchRect2/HBoxContainer"]
layout_mode = 2
text = " Potion Purple "
icon = ExtResource("12_kfb72")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Label" type="Label" parent="BossContainer/NinePatchRect2/HBoxContainer/potion_purple"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33600003
anchor_top = 0.75600004
anchor_right = 0.66400003
anchor_bottom = 0.93700004
offset_left = 0.0079956055
offset_top = -0.012008667
offset_right = -0.008003235
offset_bottom = 0.0009918213
text = "x 0"
horizontal_alignment = 1

[node name="Taco" parent="." instance=ExtResource("4_ewiiu")]
layout_mode = 0
offset_left = 99.99999
offset_top = 523.0
offset_right = 612.0
offset_bottom = 1035.0

[node name="curar_panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45100003
anchor_top = 0.39000002
anchor_right = 0.75900006
anchor_bottom = 0.531
offset_left = -144.28003
offset_top = 132.19998
offset_right = -144.28003
offset_bottom = 132.19998

[node name="NinePatchRect" type="NinePatchRect" parent="curar_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="curar_panel/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.998
anchor_bottom = 1.0
offset_right = -140.05402
offset_bottom = -2.0

[node name="personaje1" type="Button" parent="curar_panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Personaje1"
icon = ExtResource("14_risgj")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="personaje2" type="Button" parent="curar_panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Personaje2"
icon = ExtResource("15_h5yyt")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="personaje3" type="Button" parent="curar_panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Personaje3"
icon = ExtResource("16_g5t0y")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="personaje4" type="Button" parent="curar_panel/NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Personaje4"
icon = ExtResource("17_4sqxb")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Notificaciones" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 35.0
offset_top = 10.0
offset_right = -45.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_uos0l")

[node name="Label" type="Label" parent="Notificaciones"]
layout_mode = 0
offset_left = 15.0
offset_top = 18.0
offset_right = 1022.0
offset_bottom = 93.0
pivot_offset = Vector2(3, 3)
theme_override_fonts/font = ExtResource("2_fgs02")
theme_override_font_sizes/font_size = 36
text = "El GODIN Se interpone en tu 
camino"

[node name="Label2" type="Label" parent="Notificaciones"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -53.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(3, 3)
theme_override_fonts/font = ExtResource("2_fgs02")
theme_override_font_sizes/font_size = 36
text = ">"

[connection signal="pressed" from="BossContainer/NinePatchRect/VBoxContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="BossContainer/NinePatchRect/VBoxContainer/Items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="BossContainer/NinePatchRect/VBoxContainer/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="BossContainer/NinePatchRect2/HBoxContainer/potion_red" to="." method="_on_potion_red_pressed"]
[connection signal="pressed" from="BossContainer/NinePatchRect2/HBoxContainer/potion_yellow" to="." method="_on_potion_yellow_pressed"]
[connection signal="pressed" from="BossContainer/NinePatchRect2/HBoxContainer/potion_purple" to="." method="_on_potion_purple_pressed"]
[connection signal="pressed" from="curar_panel/NinePatchRect/VBoxContainer/personaje1" to="." method="_on_personaje_1_pressed"]
[connection signal="pressed" from="curar_panel/NinePatchRect/VBoxContainer/personaje2" to="." method="_on_personaje_2_pressed"]
[connection signal="pressed" from="curar_panel/NinePatchRect/VBoxContainer/personaje3" to="." method="_on_personaje_3_pressed"]
[connection signal="pressed" from="curar_panel/NinePatchRect/VBoxContainer/personaje4" to="." method="_on_personaje_4_pressed"]
